<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity">

    <ImageView
        android:id="@+id/activity_details_avatar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/activity_details_back_button"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_details_name_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_details_avatar"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Caroline" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_details_avatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_details_name_second"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingStart="5dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Caroline" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/activity_details_location"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:drawableLeft="@drawable/baseline_location_on_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                tools:text="Saint pierre du mont à km" />

            <TextView
                android:id="@+id/activity_details_phone_number"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:drawableLeft="@drawable/baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                tools:text="+33 6 86 57 90 14" />

            <TextView
                android:id="@+id/activity_details_facebook_url"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:drawableLeft="@drawable/baseline_language_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                tools:text="www.facebook.fr/caroline" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="119dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingStart="5dp"
                android:text="@string/details_about"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/activity_details_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                tools:text="Full access to both days of the conference incl. free breakfast and T-shirt.
Get access to the latest Android news on www.droidcon.com.
Must currently be enrolled at a university or Android Bootcamp to be eligible. Please present valid student ID or proof of enrollment at entry." />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_details_favorites_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EDEDED"
        app:borderWidth="0dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_details_avatar" />

</android.support.constraint.ConstraintLayout>